// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a complete address 1`] = `
CompleteAddress {
  "address": AztecAddress {
    "buffer": {
      "data": [
        38,
        160,
        80,
        38,
        69,
        237,
        217,
        110,
        218,
        27,
        219,
        219,
        228,
        121,
        180,
        173,
        181,
        196,
        36,
        14,
        219,
        66,
        223,
        219,
        205,
        120,
        52,
        85,
        2,
        107,
        8,
        209,
      ],
      "type": "Buffer",
    },
  },
  "partialAddress": Fr {
    "value": 16009644378814191409104915779389940161043759167922481803537472487287441241129n,
  },
  "publicKey": Point {
    "kind": "point",
    "x": Fr {
      "value": 1n,
    },
    "y": Fr {
      "value": 2n,
    },
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 4839644762617353585184715263262260890283625519591492218117189311518056506717n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes commitment nonce 1`] = `
Fr {
  "value": 4222185940724778617123819095985529958719262201186304938820163018723071686010n,
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 18337659243241655888804145835676901628500371494038615586825815876981664514996n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 21090938391652199999535994101952511109725456907725564751008805452452294036010n,
}
`;

exports[`abis wasm bindings computes siloed commitment 1`] = `
Fr {
  "value": 5741666220337087430811917315463541102053022007079794746458454667343611654008n,
}
`;

exports[`abis wasm bindings computes siloed nullifier 1`] = `
Fr {
  "value": 1681018319599119811296885009878788841767626624035614142751029482682231879886n,
}
`;

exports[`abis wasm bindings computes unique commitment 1`] = `
Fr {
  "value": 6915765026391441010560836419608777205717430551146748497147675379464028452704n,
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
{
  "data": [
    4,
    129,
    16,
    102,
    127,
    128,
    176,
    47,
    119,
    183,
    215,
    68,
    151,
    102,
    87,
    206,
    169,
    167,
    197,
    241,
    221,
    35,
    64,
    234,
    28,
    87,
    154,
    126,
    191,
    213,
    78,
    85,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    2,
    173,
    97,
    82,
    37,
    29,
    61,
    120,
    206,
    89,
    73,
    249,
    77,
    176,
    115,
    14,
    68,
    236,
    190,
    29,
    225,
    74,
    112,
    78,
    136,
    188,
    133,
    39,
    78,
    131,
    187,
    201,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 1074482066488852775225699482511400637808161631104400785226890921774980143568n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 13963140214795948019361170732219258580530997255889883029614475325055032325244n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 20652152763702485598282424633325927674824494004464032211548263981562785570337n,
}
`;
